<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="TIMER" Id="{2bb00279-aea0-41f1-9445-9911aa478a67}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM TIMER
VAR
	i: INT;
	Delay_on: TON;
	stps: TIME:=T#1S;
	aggiorna1s: INT; //Aggiorna timer 1s
	timer_1s: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// aggiorna variabili generali
aggiorna:=aggiorna+1;
IF aggiorna=(i*2) THEN
	aggiorna:=0;
END_IF
IF aggiorna<i THEN
	aggiorna_sec:=TRUE;
ELSE
	aggiorna_sec:=FALSE;
END_IF
//Timer 1s
aggiorna1s:=aggiorna1s+1;
IF aggiorna1s>=4 THEN
	aggiorna1s:=0;
	timer_1s:=TRUE;
ELSE
	timer_1s:=FALSE;
END_IF
ora_plc(
	NETID:= , 
	START:=timer_1s, 
	TMOUT:= T#2S, 
	BUSY=> , 
	ERR=> , 
	ERRID=> , 
	TIMESTR=> );

//Tempo dispositivi ulux
tempo_ulux.wHour:=ORA_PLC.TIMESTR.wHour;
tempo_ulux.wMinute:=ORA_PLC.TIMESTR.wMinute;
tempo_ulux.wSecond:=ORA_PLC.TIMESTR.wSecond;
tempo_ulux.wDay:=ORA_PLC.TIMESTR.wDay;
tempo_ulux.wMonth:=ORA_PLC.TIMESTR.wMonth;
tempo_ulux.wYear:=ORA_PLC.TIMESTR.wYear;

//Impulso 1 clock con settaggio variabile
Delay_on(IN:= TRUE AND NOT delay_on.Q, PT:= stps, Q=> , ET=> );

IF delay_on.Q THEN
	camera_counter:=camera_counter+1;
END_IF;
camera1:=concat('http://192.168.60.109/snap.jpeg?cb=',INT_TO_STRING(camera_counter));
camera2:=concat('http://192.168.60.105/snap.jpeg?cb=',INT_TO_STRING(camera_counter));
camera3:=concat('http://192.168.60.113/snap.jpeg?cb=',INT_TO_STRING(camera_counter));
camera4:=concat('http://192.168.60.111/snap.jpeg?cb=',INT_TO_STRING(camera_counter));]]></ST>
    </Implementation>
    <LineIds Name="TIMER">
      <LineId Id="64" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="61" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="71" Count="2" />
      <LineId Id="70" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="81" Count="4" />
      <LineId Id="79" Count="0" />
      <LineId Id="4" Count="7" />
      <LineId Id="58" Count="0" />
      <LineId Id="15" Count="5" />
      <LineId Id="2" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="48" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>